add `local_asset_component.tsx` file (wip)

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -5,6 +5,7 @@
     "jsxImportSource": "jsonx-jsx"
   },
   "imports": {
+    "std/": "https://deno.land/std@0.216.0/",
     "jsonx/": "./",
     "jsonx-jsx/jsx-runtime": "./lib/jsx_runtime/mod.ts"
   },
