--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,5 +1,11 @@
 {
   "lock": false,
+  "name": "@fartlabs/jsonx",
+  "version": "0.0.1",
+  "exports": {
+    "./std/runtime": "./lib/std/runtime/mod.ts",
+    "./std/assets": "./lib/std/assets/mod.ts"
+  },
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "jsonx"
