Introduce `LocalAsset` component (#2)
* add `local_asset_component.tsx` file (wip)

* fix `LocalGlobAssets`

* pass down encoding correctly

* Squashed commit of the following:

commit 6d2c5047ceedd3aa6575f26852797d34644dfba1
Author: Ethan Davidson <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Sun Feb 25 07:02:34 2024 -0800

    add jsr.io module `@fartlabs/jsonx`

commit 7799c854a2472759e3718bde48b3a8d6ebcb12b9
Author: Ethan Davidson <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Sun Feb 25 06:59:22 2024 -0800

    `createObject`: implement `deepMerge`

commit 8825a98a740d102eece8a12530b6374ccc5e0081
Author: Ethan Davidson <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Sat Feb 24 11:14:17 2024 -0800

    wip

* update local assets tests

* update assets tests

* fix lint errors

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -14,5 +14,8 @@
     "std/": "https://deno.land/std@0.217.0/",
     "jsonx/": "./lib/",
     "jsonx/jsx-runtime": "./lib/std/runtime/mod.ts"
+  },
+  "tasks": {
+    "test": "deno test -A"
   }
 }
