--- a/deno.jsonc
+++ b/deno.jsonc
@@ -5,7 +5,8 @@
   "exports": {
     "./jsx-runtime": "./lib/std/runtime/mod.ts",
     "./std/runtime": "./lib/std/runtime/mod.ts",
-    "./std/assets": "./lib/std/assets/mod.ts"
+    "./std/assets": "./lib/std/assets/mod.ts",
+    "./std/local_assets": "./lib/std/local_assets/mod.ts"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
