arguably useless proof of concept 😎

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -1,25 +1,20 @@
 name: Check
-
-on:
+'on':
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
-    branches: [main]
-
+    branches:
+      - main
 jobs:
   check:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
-
       - uses: denoland/setup-deno@v1
-
       - name: Format
         run: deno fmt && git diff-index --quiet HEAD
-
       - name: Lint
         run: deno lint && git diff-index --quiet HEAD
-
       - name: Test
         run: deno task test
