--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,23 +1,17 @@
 name: Publish
-on:
+'on':
   push:
     branches:
       - main
-  workflow_dispatch:
-
+  workflow_dispatch: {}
 jobs:
   publish:
     runs-on: ubuntu-latest
-
     permissions:
       contents: read
       id-token: write
-
     steps:
       - uses: actions/checkout@v4
-
-      - name: Install Deno
-        uses: denoland/setup-deno@v1
-
+      - uses: denoland/setup-deno@v1
       - name: Publish package
         run: deno publish
