--- a/deno.jsonc
+++ b/deno.jsonc
@@ -16,6 +16,8 @@
   },
   "tasks": {
     "test": "deno test -A",
-    "generate": "deno run -Ar https://deno.land/x/generate/cli/main.ts gen.ts"
-  }
+    "generate": "deno run -Ar https://deno.land/x/generate/cli/main.ts gen.ts",
+    "docs": "deno run -A --unstable-kv docs/main.ts"
+  },
+  "exclude": ["./docs/static"]
 }
