--- a/deno.jsonc
+++ b/deno.jsonc
@@ -12,17 +12,13 @@
     "jsxImportSource": "jsonx-jsx"
   },
   "imports": {
-    "jsonx/": "./lib/",
+    "@std/assert": "jsr:@std/assert@^0.220.1",
+    "@std/collections": "jsr:@std/collections@^0.220.1",
+    "@std/encoding": "jsr:@std/encoding@^0.220.1",
+    "@std/fs": "jsr:@std/fs@^0.220.1",
+    "@std/path": "jsr:@std/path@^0.220.1",
     "jsonx-jsx/jsx-runtime": "./lib/std/runtime/mod.ts",
-    "@std/assert": "jsr:@std/assert@^0.219.1",
-    "@std/cli": "jsr:@std/cli@^0.219.1",
-    "@std/collections": "jsr:@std/collections@^0.219.1",
-    "@std/encoding": "jsr:@std/encoding@^0.219.1",
-    "@std/fs": "jsr:@std/fs@^0.219.1",
-    "@std/http": "jsr:@std/http@^0.219.1",
-    "@std/path": "jsr:@std/path@^0.219.1",
-    "@std/semver": "jsr:@std/semver@^0.219.1",
-    "@std/yaml": "jsr:@std/yaml@^0.219.1"
+    "jsonx/": "./lib/"
   },
   "tasks": {
     "test": "deno test -A",
