--- a/deno.jsonc
+++ b/deno.jsonc
@@ -12,8 +12,8 @@
     "jsxImportSource": "jsonx-jsx"
   },
   "imports": {
+    "@cross/deepmerge": "jsr:@cross/deepmerge@^1.0.0",
     "@std/assert": "jsr:@std/assert@^0.220.1",
-    "@std/collections": "jsr:@std/collections@^0.220.1",
     "@std/encoding": "jsr:@std/encoding@^0.220.1",
     "@std/fs": "jsr:@std/fs@^0.220.1",
     "@std/path": "jsr:@std/path@^0.220.1",
@@ -22,8 +22,6 @@
   },
   "tasks": {
     "test": "deno test -A",
-    "generate": "deno run -Ar https://deno.land/x/generate/cli/main.ts gen.ts",
-    "docs": "deno run -A --unstable-kv docs/main.ts"
-  },
-  "exclude": ["./docs/static"]
+    "generate": "deno run -Ar https://deno.land/x/generate/cli/main.ts gen.ts"
+  }
 }
